# common-cmake-modules

./: .gitignore  CMakeLists.txt  CommonModulesConfig.cmake  CompilerWarnings.cmake  GitArchive.cmake  LICENSE.md  SopranoAddStorageDefinition.cmake.in
src/: classgeneratortool.cpp  sopranostoragetool.cpp
